--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script src="func.js"></script>
 	<title>PNTR</title>
     <h1>Penetrator)</h1>
 	<link rel="stylesheet" href="stile.css">
